--- a/app/src/main/res/layout/dailylog_item.xml
+++ b/app/src/main/res/layout/dailylog_item.xml
@@ -9,10 +9,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Monday"/>
+        android:text="Monday"
+        android:textColor="@android:color/white"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         android:text="3/25"/>
 
 </LinearLayout>
