--- a/app/src/main/res/layout/fragment_day_description.xml
+++ b/app/src/main/res/layout/fragment_day_description.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/describeDayTextView"
         android:layout_width="234dp"
         android:layout_height="41dp"
         android:layout_marginStart="8dp"
@@ -21,17 +21,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/productiveTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="92dp"
         android:layout_marginTop="88dp"
         android:text="Productive"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/describeDayTextView" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/greatTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -40,21 +40,21 @@
         android:text="Great"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toEndOf="@+id/productiveTextView"
+        app:layout_constraintTop_toBottomOf="@+id/describeDayTextView" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/unpleasantextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="92dp"
         android:layout_marginTop="28dp"
         android:text="Unpleasant"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/productiveTextView" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/badTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -63,8 +63,8 @@
         android:text="Bad"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintStart_toEndOf="@+id/unpleasantextView"
+        app:layout_constraintTop_toBottomOf="@+id/greatTextView" />
 
 
 </android.support.constraint.ConstraintLayout>
