--- a/app/src/main/res/layout/fragment_day_thought.xml
+++ b/app/src/main/res/layout/fragment_day_thought.xml
@@ -7,7 +7,7 @@
     tools:context=".initialfragments.DayThoughtFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_thought"
         android:layout_width="234dp"
         android:layout_height="41dp"
         android:layout_marginStart="8dp"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editText_thought"
         android:layout_width="213dp"
         android:layout_height="166dp"
         android:layout_marginStart="8dp"
@@ -33,22 +33,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView_thought"
         app:layout_constraintVertical_bias="0.19" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/submit_button_thought"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Button"
+        android:text="submit thought"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        app:layout_constraintTop_toBottomOf="@+id/editText_thought"
         app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
