--- a/app/src/main/res/layout/fragment_mood_cause.xml
+++ b/app/src/main/res/layout/fragment_mood_cause.xml
@@ -7,7 +7,7 @@
     tools:context=".initialfragments.MoodCauseFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/causeTextView"
         android:layout_width="234dp"
         android:layout_height="41dp"
         android:layout_marginStart="8dp"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/moodCauseEditText"
         android:layout_width="213dp"
         android:layout_height="166dp"
         android:layout_marginStart="8dp"
@@ -33,11 +33,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/causeTextView"
         app:layout_constraintVertical_bias="0.19" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/submitButton_cause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -48,7 +48,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        app:layout_constraintTop_toBottomOf="@+id/moodCauseEditText"
         app:layout_constraintVertical_bias="0.0" />
 
 
