updated fragment callbacks

--- a/app/src/main/res/layout/fragment_daily_log_display.xml
+++ b/app/src/main/res/layout/fragment_daily_log_display.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".logfragments.DailyLogDisplayFragment">
+    tools:context=".logfragments.AllDailyLogsDisplayFragment">
 
   <android.support.v7.widget.RecyclerView
+      android:id="@+id/recycler_view_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
-
 </FrameLayout>
