--- a/app/src/main/res/layout/dailylog_item.xml
+++ b/app/src/main/res/layout/dailylog_item.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="100dp"
     android:layout_height="50dp"
-    android:orientation="vertical"
-    android:background="@android:color/holo_blue_dark">
+    android:background="@android:color/holo_blue_dark"
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/dailylog_dateTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Monday"
-        android:textColor="@android:color/white"/>
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textColor="@android:color/white"-->
-        <!--android:text="3/25"/>-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/dailylog_cardview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        app:cardBackgroundColor="@android:color/holo_blue_dark">
+
+        <TextView
+            android:id="@+id/dailylog_dateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="date"
+            android:textColor="@android:color/white" />
+    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
