working on database

--- a/app/src/main/res/layout/fragment_edit_log.xml
+++ b/app/src/main/res/layout/fragment_edit_log.xml
@@ -30,7 +30,7 @@
         android:ems="10"
         android:inputType="textMultiLine"
         android:text="hjkk"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/edit_log_submit_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@
 
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/edit_log_submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
