--- a/app/src/main/res/drawable/oval_y.xml
+++ b/app/src/main/res/drawable/oval_y.xml
@@ -4,6 +4,6 @@
     android:dither="true"
     android:shape="oval">
 
-    <solid android:color="@android:color/white"/>
+    <solid android:color="@color/yellow"/>
 
 </shape>
