--- a/app/src/main/res/layout/dailylog_item.xml
+++ b/app/src/main/res/layout/dailylog_item.xml
@@ -1,83 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="200dp"
-android:layout_height="150dp"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:orientation="vertical"
-android:padding="10dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="200dp"
+    android:layout_height="150dp"
+    android:background="@android:color/transparent"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/dailylog_cardview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         android:padding="10dp"
-        app:cardBackgroundColor="@android:color/holo_blue_dark">
+        app:cardBackgroundColor="@color/yellow"
+        app:cardCornerRadius="50dp">
 
-        <TextView
-            android:id="@+id/dailylog_dateTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:text="date"
-            android:textColor="@android:color/white" />
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/dailylog_dateTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:text="date"
+                android:textColor="@android:color/holo_blue_dark"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 
 </LinearLayout>
 
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--xmlns:tools="http://schemas.android.com/tools"-->
-<!--android:layout_width="200dp"-->
-<!--android:layout_height="150dp"-->
-<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--android:orientation="vertical"-->
-<!--android:padding="10dp">-->
-
-<!--<android.support.v7.widget.CardView-->
-    <!--android:id="@+id/layout_mzodiac_cardview"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_margin="10dp"-->
-    <!--android:background="@android:color/white"-->
-    <!--android:padding="10dp"-->
-    <!--app:cardCornerRadius="50dp">-->
-
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:foregroundGravity="center"-->
-        <!--android:layout_marginStart="10dp"-->
-        <!--android:layout_marginTop="10dp">-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/zodiacName_textView"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:fontFamily="casual"-->
-            <!--android:gravity="center"-->
-            <!--android:text="zodiac name"-->
-            <!--android:textColor="@android:color/holo_blue_dark"-->
-            <!--android:textSize="20sp"-->
-            <!--android:textStyle="bold" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/zodiacDate_textView"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:fontFamily="casual"-->
-            <!--android:gravity="center"-->
-            <!--android:text="zodiac date"-->
-            <!--android:textColor="@android:color/holo_blue_dark"-->
-            <!--android:textSize="20sp"-->
-            <!--android:textStyle="bold" />-->
-    <!--</LinearLayout>-->
-
-<!--</android.support.v7.widget.CardView>-->
-
-
-<!--</LinearLayout>-->
